# CreateAgents

./: .env.example  .gitignore  README.md  pyproject.toml
playground/: AutoTokenizer.py  gemini_list_models.py  gemini_parameters.py  gemini_test.py  misc_commands.md  output_gemini_list_models.txt  token_analysis_gemini.ipynb
playground/fake_llm/: fake_llm.py
playground/gemini/: gemini_create_simple.py  gemini_gradio_chat.py  gemini_parameters.py  gemini_use_openailib.py
playground/gemini/responses/: factorial_problem.py
playground/lcel/: ex_gemini_01.py  ex_gemini_02.py  ex_ollama_01.py  ex_openai_01.py
playground/ollama/: ollama_ex_llama_3_2.py  ollama_ex_openailib.py
playground/vertexai/: vertex_ai.ipynb
